<resources>
    <string name="app_name">Exercise Logger</string>

    <string-array name="days">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>

    <string-array name="exerciseType">
        <item>Weights</item>
        <item>Bodyweight</item>
        <item>Weighted</item>
        <item>Cardio</item>
    </string-array>

    <string-array name="intensity">
        <item>Easy</item>
        <item>Somewhat Easy</item>
        <item>Moderate</item>
        <item>Somewhat Difficult</item>
        <item>Difficult</item>
    </string-array>

    <string-array name="mainLifts">
        <item>Bench</item>
        <item>Squat</item>
        <item>Deadlift</item>
        <item>Overhead Press</item>
    </string-array>

    <string-array name="rpe">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="programType">
        <item>Sets x Reps</item>
        <item>Sets x Duration</item>
        <item>Duration</item>
        <item>Reps</item>
        <item>1 Rep Max</item>
    </string-array>

    <string-array name="timeAM_PM">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="weightType">
        <item>Barbell</item>
        <item>Dumbbells</item>
        <item>EZ Bar</item>
        <item>Kettlebell</item>
        <item>Other</item>
    </string-array>

    <string-array name="weightUnit">
        <item>lbs</item>
        <item>kgs</item>
    </string-array>

    <string name="days">Days</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="exercise">Exercise Name</string>
    <string name="intensity">Intensity</string>
    <string name="weight">Weight</string>
    <string name="pounds">lbs</string>
    <string name="kilograms">kgs</string>
    <string name="time">Time</string>
    <string name="typeExercise">Exercise Type</string>
    <string name="duration">Duration</string>
    <string name="defaultInput">No Input</string>

    <string name="hour">hrs</string>
    <string name="minute">mins</string>
    <string name="second">secs</string>
    <string name="other">Other</string>

    <string name="sets">Sets</string>
    <string name="reps">Reps</string>

    <string name="digitsHour">hh</string>
    <string name="digitsMinute">mm</string>
    <string name="digitsSecond">ss</string>

    <string name="addSpecification">Add Specification</string>
    <string name="weightType">Weight Type</string>
    <string name="setRest">Rest Between Sets</string>
    <string name="date">Date</string>
    <string name="rpe">RPE</string>
    <string name="specs">More Specifications</string>
    <string name="oneRepMax">1 Rep Max</string>

    <string name="currentWeek">Current week</string>
    <string name="noActivity">No activity yet</string>
    <string name="addSpace">%s %s</string>
    <string name="weightDetails">%s %s %s %s</string>
    <string name="weightText">%1s %2s</string>
    <string name="programNumbers">%s %s %s %s %s</string>
    <string name="programType">Program Type</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder">Item Placeholder</string>

    <string name="addPreset">Add Preset</string>
    <string name="presets">Presets</string>

    <!-- Strings dealing with database entries -->
    <string name="add">Add</string>
    <string name="addNew">Add New</string>
    <string name="choosePreset">Choose Preset</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


    <string name="title_activity_test">MainActivity</string>
    <string name="title_body">Body</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_presets">Presets</string>
    <string name="title_statistics">Statistics</string>

    <!-- Body Tab Specific Strings -->
    <string name="basicBodyInfo">Basic Body Info</string>
    <string name="additionalInfo">Additional Info</string>
    <string name="currentWeight">Current Weight</string>
    <string name="update">Update</string>

    <!-- Settings Strings -->
    <string name="settings">Settings</string>
    <string name="unit">Unit</string>
    <string name="unitMeasurement">Unit of Measurement</string>
    <string name="notifications">Notifications</string>

    <!-- Calendar Strings -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="thisWeek">This Week</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="bodyInfo">Body Info</string>
    <string name="howTos">How-Tos</string>

    <!-- View days strings in home screen -->
    <string name="viewPreviousWeek">View Previous Week</string>
    <string name="viewYesterday">View Yesterday</string>
    <string name="viewToday">View Today</string>
    <string name="viewTomorrow">View Tomorrow</string>
    <string name="viewWeek">View This Week</string>

    <!-- Presets Tabs & Strings -->
    <string name="noCustoms">No custom presets yet</string>
    <string name="variations">Variations</string>
    <string name="upper">Upper Body</string>
    <string name="lower">Lower Body</string>
    <string name="custom">Custom</string>


    <string-array name="upperExercises">
        <item name="overheadPress">Overhead/Shoulder Press</item>
        <item name="frontRaise">Front Raise</item>
        <item name="lateralRaise">Side/Lateral Raise</item>
        <item name="benchPress">Bench Press</item>
        <item name="pushUp">Push Up</item>
        <item name="tricepExtension">Tricep Extension</item>
        <item name="tricepPushDown">Tricep Push Down</item>
        <item name="pullUp">Pull Up</item>
        <item name="row">Row</item>
        <item name="facePull">Face Pull</item>
        <item name="pullDown">Lat Pull Down</item>
        <item name="bicepCurl">Bicep Curl</item>

    </string-array>
    <!-- Default Common Upper Body Exercises -->
    <string name="overheadPress">Overhead/Shoulder Press</string>
    <string name="frontRaise">Front Raise</string>
    <string name="lateralRaise">Side/Lateral Raise</string>
    <string name="benchPress">Bench Press</string>
    <string name="pushUp">Push Up</string>
    <string name="tricepExtension">Tricep Extension</string>
    <string name="tricepPushDown">Tricep Push Down</string>
    <string name="pullUp">Pull Up</string>
    <string name="row">Row</string>
    <string name="facePull">Face Pull</string>
    <string name="pullDown">Lat Pull Down</string>
    <string name="bicepCurl">Bicep Curl</string>

    <!-- Bench Variations -->
    <string name="flatBench">Flat Bench Press</string>
    <string name="inclineBench">Incline Bench Press</string>
    <string name="declineBench">Decline Bench Press</string>
    <string name="pinPress">Pin Press</string>

    <!-- Push Up Variations -->
    <string name="levelPushUp">Level Push Up</string>
    <string name="kneePushUp">Knee Push Up</string>
    <string name="inclinePushUp">Incline Push Up</string>
    <string name="declinePushUp">Decline Push Up</string>
    <string name="diamondPushUp">Diamond Push Up</string>
    <string name="cobraPushUp">Cobra Push Up</string>
    <string name="handstandPushUp">Handstand Push Up</string>

    <!-- Row Variations -->
    <string name="bentOverRow">Bent Over Row</string>
    <string name="pendlayRow">Pendlay Row</string>
    <string name="tBarRow">T-Bar Row</string>
    <string name="seatedRow">Seated Row</string>

    <!-- Default Common Lower Body Exercises -->
    <string name="squat">Squat</string>
    <string name="legPress">Leg Press</string>
    <string name="legExtension">Leg Extension</string>
    <string name="hipThrust">Hip Thrust</string>
    <string name="deadlift">Deadlift</string>
    <string name="hamstringCurl">Hamstring Curl</string>
    <string name="calfRaise">Calf Raise</string>
</resources>
