<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dropdown_menu"
        android:title="@string/days"
        android:icon="@drawable/ic_baseline_menu_24"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/Sunday"
                android:title="@string/sunday"
                app:showAsAction="never"/>

            <item
                android:id="@+id/Monday"
                android:title="@string/monday"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Tuesday"
                android:title="@string/tuesday"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Wednesday"
                android:title="@string/wednesday"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Thursday"
                android:title="@string/thursday"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Friday"
                android:title="@string/friday"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Saturday"
                android:title="@string/saturday"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom">

    </item>

</menu>