<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpperFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/entriesPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/overheadPress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/overheadPress"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry"
                />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/lateralRaise"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/lateralRaise"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/benchPress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/benchPress"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/pushUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/pushUp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/tricepExtension"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/tricepExtension"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/tricepPushDown"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/tricepPushDown"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/pullUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/pullUp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/row"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/row"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/pullDown"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/pullDown"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_marginTop="1dp"
                android:id="@+id/bicepCurl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border"
                android:text="@string/bicepCurl"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>