<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/bentOverRow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/bentOverRow"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/pendlayRow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/pendlayRow"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/tBarRow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/tBarRow"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/seatedRow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/seatedRow"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</LinearLayout>